- Fixes issue #97 - Fixes issue #122 - Fixes issue #123 - Dynamic routing for profiles added - Fixes issues with Carousel on mobile and xl screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -116,7 +116,9 @@ h6 {
   font-size: 64px;
 }
 
-p, a, button {
+p,
+a,
+button {
   font-family: var(--poppins);
   font-weight: 300;
   font-size: 16px;
@@ -196,7 +198,7 @@ svg.signup path.themeSecondary {
   height: var(--radix-navigation-menu-viewport-height);
 }
 
-.sidebar_section:not(:first-child){
+.sidebar_section:not(:first-child) {
   @apply mt-10;
 }
 
